# mcpato

./: .env.example  .gitignore  Cargo.toml  DEPLOY.md  README.md
docs/: CARRY_BOT.md  EXPERIMENTOS.md  README.md
src/: agent.rs  banner.rs  broker.rs  carry.rs  config.rs  crossmomentum.rs  dashboard.html  db.rs  evolution.rs  indicators.rs  logo.txt  main.rs  models.rs  nn.rs  notify.rs  oos.rs  rest_binance.rs  runtime.rs  signals.rs  walkforward.rs  web.rs  ws_binance.rs
