[package]
name = "mcpato"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.44.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.26.2"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
